Added Sport Commentary

--- a/index.html
+++ b/index.html
@@ -125,7 +125,27 @@
         <div class="container">
             <div class="card-deck">
 
-                <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project11"
+                <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project12"
+                data-target="#Project12Modal">
+                <div class="projectGif">
+                    <img class="card-img-top" src="images/Projects/Sport Commentary/Sport Commentary.gif" alt="Card image cap">
+                    <div class="magnifier">
+                        <i class="fas fa-search-plus fa-3x"></i>
+                    </div>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title topic">Sport Commentary</h5>
+                    <span class="badge badgeMine text-dark">C#</span>
+                    <span class="badge badgeMine text-dark">Blazor Server Side</span>
+                    <span class="badge badgeMine text-dark">SignalR</span>
+                    <span class="badge badgeMine text-dark">MudBlazor</span>
+                    <p class="card-text">2022<a href="https://github.com/owik100/SportCommentary"
+                        target="blank">Github <i class="fab fa-github"></i>
+                    </a> </p>
+                </div>
+            </div>
+
+            <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project11"
                 data-target="#Project11Modal">
                 <div class="projectGif">
                     <img class="card-img-top" src="images/Projects/Code Compiler Service Manager/Code Compiler Service Manager.gif" alt="Card image cap">
@@ -872,6 +892,61 @@
                 </div>
             </div>
         </div>
+
+        <div class="modal fade" id="Project12Modal" tabindex="-1" role="dialog" aria-labelledby="Project12ModalTitle"
+        aria-hidden="true">
+        <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title w-100 text-center topic">Sport Commentary</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p class="text-center">Webowa aplikacja stworzona w blazor server side. Pozwala na prowadzenie relacji live z wydarzeń sportowych. Administrator posiada możliwość
+                        definiowania wydarzeń do wcześniej utworzonych sportów. Komentator podczas prowadzenia relacji wybiera odpowiednie wydarzenie dodając opis. Za pomocą SignalR 
+                         relacja jest odświeżana w czasie rzeczywistym wszystkim użytkownikom🏅</p>
+                        <div class="techBadges">
+                            <span class="badge badgeMine text-dark">C#</span>
+                            <span class="badge badgeMine text-dark">Blazor Server Side</span>
+                            <span class="badge badgeMine text-dark">SignalR</span>
+                            <span class="badge badgeMine text-dark">MudBlazor</span>
+                        </div>
+                    <p class="text-center"><a href="https://github.com/owik100/SportCommentary"
+                            target="blank">Github <i class="fab fa-github"></i> </a></p>
+                    <img class=" bImg mx-auto d-block img-fluid" id="main12"
+                        src="images/Projects/Sport Commentary/Sport Commentary.gif">
+                </div>
+                <div class="modal-footer">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <img class="img-fluid sImg" smallID=small12
+                                    src="images/Projects/Sport Commentary/Sport Commentary.gif">
+                            </div>
+                            <div class="col">
+                                <img class="img-fluid sImg" smallID=small12
+                                    src="images/Projects/Sport Commentary/events.png">
+                            </div>
+                            <div class="col">
+                                <img class="img-fluid sImg" smallID=small12
+                                    src="images/Projects/Sport Commentary/Strong glowna.png">
+                            </div>
+                            <div class="col">
+                                <img class="img-fluid  sImg" smallID=small12
+                                    src="images/Projects/Sport Commentary/sports.png">
+                            </div>
+                            <div class="col">
+                                <img class="img-fluid sImg" smallID=small12
+                                    src="images/Projects/Sport Commentary/new live.png">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </section>
 
     <!--Contact, footer-->
