Dodanie projektu Scan Manager

--- a/index.html
+++ b/index.html
@@ -123,9 +123,31 @@
         <p class="text-center">Kilka zrealizowanych przeze mnie projektów.</p>
         <p class="text-center mb-5">Naciśnij na jakiś aby dowiedzieć się więcej! 🔍</p>
         <div class="container">
-            <div class="card-deck">
 
-                <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project12"
+        <div class="card-deck">
+
+            <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project13"
+                data-target="#Project13Modal">
+                <div class="projectGif">
+                    <img class="card-img-top" style="height:98%;"  src="images/Projects/Scan Manager/scanAction.gif" alt="Card image cap">
+                    <div class="magnifier">
+                        <i class="fas fa-search-plus fa-3x"></i>
+                    </div>
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title topic">QR and Barcode Scan Manager</h5>
+                    <span class="badge badgeMine text-dark">C#</span>
+                    <span class="badge badgeMine text-dark">MAUI</span>
+                    <p class="card-text" style="margin-bottom:0;">2023-2024 <a href="https://play.google.com/store/apps/details?id=com.lemonowikdev.qrandbarcodescanmanager"
+                        target="blank">Google Play <i class="fab fa-google-play"></i></a></p>
+                        <p class="card-text" style="margin-bottom:0;">
+                        <a href="https://github.com/owik100/ScanManagerSamples"
+                        target="blank">&nbsp;&nbsp;Advanced configuration guide
+                        <i class="fab fa-github"></i></a> </p>
+                </div>
+            </div>
+
+            <div class="card projectContainer projectGifAndMagnifer" data-toggle="modal" id="Project12"
                 data-target="#Project12Modal">
                 <div class="projectGif">
                     <img class="card-img-top" src="images/Projects/Sport Commentary/Sport Commentary.gif" alt="Card image cap">
@@ -139,7 +161,7 @@
                     <span class="badge badgeMine text-dark">Blazor Server Side</span>
                     <span class="badge badgeMine text-dark">SignalR</span>
                     <span class="badge badgeMine text-dark">MudBlazor</span>
-                    <p class="card-text">2022<a href="https://github.com/owik100/SportCommentary"
+                    <p class="card-text">2022 <a href="https://github.com/owik100/SportCommentary"
                         target="blank">Github <i class="fab fa-github"></i>
                     </a> </p>
                 </div>
@@ -158,7 +180,7 @@
                     <span class="badge badgeMine text-dark">C#</span>
                     <span class="badge badgeMine text-dark">WinForms</span>
                     <span class="badge badgeMine text-dark">Windows Service</span>
-                    <p class="card-text">2022<a href="https://github.com/owik100/CodeCompilerServiceManager"
+                    <p class="card-text">2022 <a href="https://github.com/owik100/CodeCompilerServiceManager"
                         target="blank">Github <i class="fab fa-github"></i>
                     </a> </p>
                 </div>
@@ -893,7 +915,7 @@
             </div>
         </div>
 
-        <div class="modal fade" id="Project12Modal" tabindex="-1" role="dialog" aria-labelledby="Project12ModalTitle"
+    <div class="modal fade" id="Project12Modal" tabindex="-1" role="dialog" aria-labelledby="Project12ModalTitle"
         aria-hidden="true">
         <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -941,6 +963,66 @@
                                 <img class="img-fluid sImg" smallID=small12
                                     src="images/Projects/Sport Commentary/new live.png">
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="Project13Modal" tabindex="-1" role="dialog" aria-labelledby="Project13ModalTitle"
+        aria-hidden="true">
+        <div class="modal-dialog  modal-lg modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title w-100 text-center topic">QR and Barcode Scan Manager</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p class="text-center">Aplikacja pozwala na skanowanie kodów kreskowych oraz kodów QR i innych. 
+                        Dostępne są opcje skanowania ręcznego oraz skanowania seryjnego. 
+                        Aplikacja zapisuje pozycje w historii oraz umożliwia wyeksportowanie wyników np. do .CSV. 
+                        Dodatkowo można podjąć akcje zależną od rodzaju zeskanowanego kodu np. bezpośrednio zadzwonić na nr telefonu.
+                        Posiada również konfigurowalne zdarzenia, które można samemu przygotować używając C# np. skanować tylko produkty pochodzące z polski (początek kodu 590). 📷</p>
+                        <div class="techBadges">
+                            <span class="badge badgeMine text-dark">C#</span>
+                            <span class="badge badgeMine text-dark">MAUI</span>
+                        </div>
+                    <p class="text-center"><a href="https://play.google.com/store/apps/details?id=com.lemonowikdev.qrandbarcodescanmanager"
+                            target="blank">Google Play <i class="fab fa-google-play"></i> </a></p>
+                    <img class="bImg mx-auto d-block img-fluid" id="main13"
+                        src="images/Projects/Scan Manager/scanAction.gif">
+                </div>
+                <div class="modal-footer">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <img class="img-fluid sImg" smallID=small13
+                                    src="images/Projects/Scan Manager/scanAction.gif">
+                            </div>
+                            <div class="col">
+                                <img class="img-fluid sImg" smallID=small13
+                                    src="images/Projects/Scan Manager/historia.jpg">
+                            </div>
+                            <div class="col">
+                                <img class="img-fluid sImg" smallID=small13
+                                src="images/Projects/Scan Manager/akcja.jpg">
+                            </div>
+                            <div class="col">
+                                <img class="img-fluid sImg" smallID=small13
+                                src="images/Projects/Scan Manager/tworzenie.jpg">
+                            </div>
+                            <div class="col">
+                                <img class="img-fluid  sImg" smallID=small13
+                                src="images/Projects/Scan Manager/trigger.PNG">
+                            </div>
+                            <div class="col">
+                                <img class="img-fluid sImg" smallID=small13
+                                src="images/Projects/Scan Manager/qr.jpg">
+                            </div>
+                        </div>
                         </div>
                     </div>
                 </div>
